<resources>
    <string name="app_name">AutoScan</string>
    <string name="action_settings">Paramètres</string>

    <string name="toolbar_title_region">Région</string>
    <string name="toolbar_title_station">Station</string>
    <string name="toolbar_title_desk">Bureau</string>
    <string name="scanned_station_count">Nombre de station scannés: %1$d/%2$d</string>
    <string name="scanned_desk_count">Nombre de bureaux scannés: %1$d/%2$d</string>
    <string name="equipment_count">%1$d EQUIPEMENTS</string>
    <string name="desk_barcode">Bureau: %1$s</string>
    <string name="action_hide">Masquer</string>
    <string name="message_desks_hidden">Les éléments ont été masqués</string>

    <string name="toolbar_title_equipment">Équipement</string>
    <string name="equipment_barcode">Équipement: %1$d</string>
    <string name="equipment_type">Type: %1$s</string>
    <string name="equipment_condition">État d\'équipment</string>
    <string name="equipment_state_dialog_title">Choisissez un état</string>
    <string name="barcode_input_hint">Code à barre</string>
    <string name="equipment_synced_message">Scanné et synchronisé</string>
    <string name="equipment_scanned_message">Scanné mais non synchronisé</string>
    <string name="equipment_not_scanned_message">Non scanné</string>
    <string name="equipment_pending_message">Scan en cours…</string>
    <string name="message_error_unknown">Désolé, quelque chose s\'est mal passé.</string>
    <string name="message_error_unknown_barcode">Code à barres non reconnu</string>
    <string name="message_error_equipment_already_scanned">Équipement déjà scanné</string>
    <string name="message_equipment_condition_changed">L\'état de l\'équipement a bien été modifié</string>
    <string name="equipment_moved_message">Attention l\'équipement a été déplacé</string>
    <string name="message_you_are_offline">Vous êtes actuellement hors connexion</string>
    <string name="message_error_network">Connexion échoué</string>

    <string name="toolbar_title_login">Connexion</string>
    <string name="prompt_email">Adresse e-mail</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="welcome">"Bienvenue"</string>
    <string name="invalid_credentials">Nom d\'utilisateur ou mot de passe incorrect</string>
    <string name="login_failed">"Connexion échoué."</string>
    <string name="action_sign_in">Connexion</string>
    <string name="action_retry">RÉESSAYER</string>

    <!--Items order is important!-->
    <string-array name="equipment_condition">
        <item>Bon</item>
        <item>Moyen</item>
        <item>Mauvais</item>
    </string-array>

    <string name="action_logout">Déconnexion</string>
    <string name="return_to_top">Aller en haut</string>
    <string name="download_in_progress_message">Téléchargement en cours... Veuillez patienter.</string>
    <string name="download_complete_message">Téléchargement terminé.</string>
    <string name="start_scanning_message">Scanner un bureau</string>
    <string name="server">Serveur</string>
    <string name="server_address">L\'adresse IP du serveur.</string>
    <string name="about">À propos</string>
    <string name="developed_by">Développée par ONM Algérie.</string>
    <string name="synced">Envoyé</string>
    <string name="not_synced">Non Envoyé</string>
    <string name="not_scanned">Non Scanné</string>
    <string name="notification_title_sync_complete">Synchronisation terminée</string>
    <string name="notification_description_sync_complete">Tous les équipements ont été synchronisés.</string>
    <string name="notification_title_download">Téléchargement de données</string>
    <string name="notification_cancel_download">Annuler</string>
    <string name="notification_description_download">En cours</string>
    <string name="notification_channel_download">Download</string>

    <string name="download_message">Veuillez patienter pendant le téléchargement des données.</string>
    <string name="loading">Chargement...</string>

    <string name="toolbar_title_settings">Paramètres</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Clair</string>
    <string name="theme_dark">Sombre</string>
    <string name="theme_follow_os_setting">Thème du système</string>
    <string name="scan_mode">Mode de scan</string>
    <string name="scan_mode_automatic">Automatique</string>
    <string name="scan_mode_manual">Manuel</string>
    <string name="barcode_length">Longueur du code-barres</string>
    <string name="edit_barcode_length_dialog_title">Modifier la longueur du code-barres</string>
    <string name="dialog_title_edit_server">Modifier l\'adresse du serveur</string>
    <string name="prompt_server_url">URL</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Annuler</string>
    <string name="error_Invalid_url">URL erronée</string>
    <string name="database_name">Nom de la base de données</string>
    <string name="dialog_title_edit_database_name">Modifier le nom de la base de données</string>
</resources>
