<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.desk.DeskFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        app:title="@string/toolbar_title_desk" />

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/deskRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:background="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@+id/barcodeInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/barcodeInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_corners_32dp"
        android:elevation="2dp"
        android:ems="10"
        android:hint="@string/barcode_input_hint"
        android:inputType='textEmailAddress|textCapCharacters'
        android:maxLines="1"
        android:padding="8dp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barcodeSubmitButton"
        app:layout_constraintStart_toStartOf="parent" />
    <!--android:text="CNTM08"-->

    <ImageButton
        android:id="@+id/barcodeSubmitButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ripple_circle"
        android:elevation="2dp"
        app:backgroundTint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/barcodeInput"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/barcodeInput"
        app:srcCompat="@drawable/ic_send_24dp" />

    <com.example.onmbarcode.presentation.util.MySnackbar
        android:id="@+id/snackbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="@+id/deskRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />

    <ProgressBar
        android:id="@+id/downloadProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/deskRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/downloadMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_in_progress_message"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/downloadProgressBar"
        app:layout_constraintStart_toStartOf="@+id/downloadProgressBar"
        app:layout_constraintTop_toBottomOf="@+id/downloadProgressBar"
        tools:visibility="gone" />

    <TextView
        android:id="@+id/downloadCompleteMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/download_complete_message"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/deskRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:visibility="gone" />

    <ImageView
        android:id="@+id/barcodeIcon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:tint="@android:color/darker_gray"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/deskRecyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@drawable/ic_add_barcode"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/scanDeskMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_scanning_message"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/barcodeIcon"
        app:layout_constraintStart_toStartOf="@+id/barcodeIcon"
        app:layout_constraintTop_toBottomOf="@+id/barcodeIcon"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>