<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/AppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:popupTheme="@style/ThemeOverlay.MaterialComponents.Toolbar.Surface"
            app:title="@string/toolbar_title_desk" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/serverTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/server"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/server"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintEnd_toStartOf="@+id/editServerButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/serverTitle"
            app:layout_constraintTop_toBottomOf="@+id/serverTitle"
            tools:text='http://192.168.4.94:8069' />

        <ImageButton
            android:id="@+id/editServerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="?attr/colorControlNormal"
            app:layout_constraintBottom_toBottomOf="@+id/server"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/server"
            app:srcCompat="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:src="?attr/colorControlHighlight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/server" />

        <TextView
            android:id="@+id/themeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/theme"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <TextView
            android:id="@+id/theme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintEnd_toStartOf="@id/editThemeButton"
            app:layout_constraintStart_toStartOf="@+id/themeTitle"
            app:layout_constraintTop_toBottomOf="@+id/themeTitle"
            tools:text="Follow OS Setting" />

        <ImageButton
            android:id="@+id/editThemeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:tint="?attr/colorControlNormal"
            app:layout_constraintBottom_toBottomOf="@+id/theme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/theme"
            app:srcCompat="@drawable/ic_arrow_drop_down" />

        <ImageView
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:src="?attr/colorControlHighlight"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/theme" />

        <TextView
            android:id="@+id/aboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/about"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorSecondary"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/serverTitle"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/about"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/developed_by"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/aboutTitle"
            app:layout_constraintTop_toBottomOf="@+id/aboutTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>